--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
     tbody td.balance{font-weight:700}
     h2{margin:1.8rem 0 0.6rem;font-size:1.2rem;text-decoration:underline;}
 
-    /* separatore mese nella tabella transazioni */
     .month-sep td{background:#d0d7e6;font-weight:700;text-align:left;font-size:1rem;padding-left:0.4rem}
   </style>
 </head>
@@ -53,148 +52,124 @@
 
 <script>
 /*************** PARAMETRI ***************/
-const startBalance = 5300 + 800;          // saldo 24‑06‑2025 → 6 100 €
+const startBalance = 6100;                    // saldo 24‑06‑2025
 const startDate    = new Date("2025-06-24");
 const endDate      = new Date("2026-12-31");
 
-// ⇒ helper per ultimo giorno del mese
-const lastDay = (y,m) => new Date(y, m+1, 0).getDate(); // m = 0‑based
+const lastDay = (y,m) => new Date(y, m+1, 0).getDate();
 
-/* ======= DEFINIZIONE VOCI RICORRENTI ======= */
-const recurSubs = [
-  {cat:"Netflix",  amt:19, day:26,  from:"2025-06"},
-  {cat:"Will",     amt:7,  day:28,  from:"2025-06"},
-  {cat:"ChatGPT",  amt:23, day:22,  from:"2025-06"},
-  {cat:"NowTV",    amt:5,  day:19,  from:"2025-07"},
-  {cat:"Spotify",  amt:15, day:20,  from:"2025-07"},
-  {cat:"Prime Video AD", amt:2,  day:16,  from:"2025-07"},
-  {cat:"iCloud",   amt:10, day:23,  from:"2025-07"},
-  {cat:"YouTube+", amt:9,  day:11,  from:"2025-07"},
-  {cat:"Prime",    amt:5,  day:16,  from:"2025-07"}
+/* === ABBONAMENTI RICORRENTI === */
+const subscriptions = [
+  {cat:"Netflix",        amt:19, day:26, from:"2025-06"},
+  {cat:"Will",           amt:7,  day:28, from:"2025-06"},
+  {cat:"ChatGPT",        amt:23, day:22, from:"2025-06"},
+  {cat:"NowTV",          amt:5,  day:19, from:"2025-07"},
+  {cat:"Spotify",        amt:15, day:20, from:"2025-07"},
+  {cat:"Prime Video AD", amt:2,  day:16, from:"2025-07"},
+  {cat:"iCloud",         amt:10, day:23, from:"2025-07"},
+  {cat:"YouTube+",       amt:9,  day:11, from:"2025-07"},
+  {cat:"Prime",          amt:5,  day:16, from:"2025-07"}
 ];
 
-/* ======= TRANSAZIONI UNA‑TANTUM ======= */
+/* === SPESE/ENTRATE UNA‑TANTUM === */
 const oneOff = [
-  {date:"2025-06-27",cat:"Aereo Sicilia", amt:53, type:"Spesa"},
-  {date:"2025-07-12",cat:"Beat Canzone",  amt:35, type:"Spesa"},
-  {date:"2025-08-12",cat:"Beat Canzone",  amt:35, type:"Spesa"},
-  {date:"2025-07-16",cat:"Mix Canzone",   amt:27, type:"Spesa"},
-  {date:"2025-08-16",cat:"Mix Canzone",   amt:27, type:"Spesa"},
-  {date:"2025-07-27",cat:"Aereo Sicilia", amt:53, type:"Spesa"},
-  {date:"2025-08-10",cat:"Rimborso 730",  amt:400,type:"Entrata"},
+  {date:"2025-06-27",cat:"Aereo Sicilia", amt:53,  type:"Spesa"},
+  {date:"2025-07-12",cat:"Beat Canzone",  amt:35,  type:"Spesa"},
+  {date:"2025-08-12",cat:"Beat Canzone",  amt:35,  type:"Spesa"},
+  {date:"2025-07-16",cat:"Mix Canzone",   amt:27,  type:"Spesa"},
+  {date:"2025-08-16",cat:"Mix Canzone",   amt:27,  type:"Spesa"},
+  {date:"2025-07-27",cat:"Aereo Sicilia", amt:53,  type:"Spesa"},
+  {date:"2025-08-10",cat:"Rimborso 730",  amt:400, type:"Entrata"},
   {date:"2025-07-15",cat:"Tredicesima",   amt:1300,type:"Entrata"}
 ];
 
-/* ======= FINANZIAMENTO (rate residue) ======= */
+/* === RATE FINANZIAMENTO === */
 const loan = [
-  {date:"2025-07-01", amt:39},
-  {date:"2025-08-01", amt:39},
-  {date:"2025-09-01", amt:39},
-  {date:"2025-10-01", amt:39}
-];
+  "2025-07-01","2025-08-01","2025-09-01","2025-10-01"
+].map(d=>({date:d,cat:"Finanziamento",amt:39,type:"Spesa"}));
 
-/*************** GENERAZIONE TRANSAZIONI ***************/
-const transactions = [];
-const add = (d,cat,type,amt) => transactions.push({date:d,category:cat,type,amount:amt});
+/************ GENERA TRANSAZIONI ************/
+const tx=[];
+const add=(d,cat,type,amt)=>tx.push({date:d,category:cat,type,amount:amt});
 
-// A) one‑off & loan
-oneOff.forEach(o=>add(o.date,o.cat,o.type,o.amt));
-loan.forEach(l=>add(l.date,"Finanziamento","Spesa",l.amt));
+[...oneOff,...loan].forEach(o=>add(o.date,o.cat,o.type,o.amt));
 
-// B) period loop month by month
-let cursor = new Date(startDate.getFullYear(), startDate.getMonth(), 1);
-while(cursor <= endDate){
-  const y = cursor.getFullYear();
-  const m = cursor.getMonth();
-  const isoMonth = `${y}-${String(m+1).padStart(2,'0')}`;
+let cur = new Date(startDate.getFullYear(), startDate.getMonth(), 1);
+while(cur<=endDate){
+  const y=cur.getFullYear();
+  const m=cur.getMonth();
+  const iso=`${y}-${String(m+1).padStart(2,'0')}`;
 
-  /* Entrate mensili dal luglio 2025 */
-  if(cursor >= new Date("2025-07-01")){
-    add(`${isoMonth}-01","Stipendio","Entrata",1650);
-    add(`${isoMonth}-01","Ticket Edenred","Entrata",160);
+  // Entrate fisse da luglio 2025
+  if(cur>=new Date("2025-07-01")){
+    add(`${iso}-01`, "Stipendio", "Entrata", 1650);
+    add(`${iso}-01`, "Ticket Edenred", "Entrata", 160);
   }
-  /* Affitto ogni fine mese */
-  add(`${isoMonth}-${lastDay(y,m)}`,"Affitto","Spesa",680);
-  /* ATM tranne agosto 2025 */
-  if(!(isoMonth==="2025-08")) add(`${isoMonth}-${lastDay(y,m)}`,"ATM","Spesa",39);
-
-  /* Tabacco 4× mese (5,12,19,26) */
-  [5,12,19,26].forEach(d=>{
-    if(d<=lastDay(y,m)) add(`${isoMonth}-${String(d).padStart(2,'0')}","Tabacco","Spesa",20);
-  });
-
-  /* Abbonamenti ricorrenti */
-  recurSubs.forEach(s=>{
-    if(isoMonth >= s.from){
-      const day = Math.min(s.day, lastDay(y,m));
-      add(`${isoMonth}-${String(day).padStart(2,'0')}",s.cat,"Spesa",s.amt);
+  // Affitto
+  add(`${iso}-${lastDay(y,m)}`, "Affitto", "Spesa", 680);
+  // ATM tranne agosto 2025
+  if(iso!=="2025-08") add(`${iso}-${lastDay(y,m)}`, "ATM", "Spesa", 39);
+  // Tabacco 4 volte
+  [5,12,19,26].forEach(d=>{ if(d<=lastDay(y,m)) add(`${iso}-${String(d).padStart(2,'0')}`,"Tabacco","Spesa",20);} );
+  // Abbonamenti
+  subscriptions.forEach(s=>{
+    if(iso>=s.from){
+      const day=Math.min(s.day,lastDay(y,m));
+      add(`${iso}-${String(day).padStart(2,'0')}`, s.cat, "Spesa", s.amt);
     }
   });
 
-  cursor.setMonth(m+1);
+  cur.setMonth(m+1);
 }
 
-/* Ordina */
-transactions.sort((a,b)=> new Date(a.date) - new Date(b.date));
+// Ordina
+tx.sort((a,b)=> new Date(a.date)-new Date(b.date));
 
-/********** CALCOLO SALDI & RIEPILOGHI **********/
-let running = startBalance;
-transactions.forEach(t=>{
-  running += (t.type==="Entrata"? +t.amount : -t.amount);
-  t.balance = running;
+/*********** CALCOLA SALDI ***********/
+let balance=startBalance;
+const monthly={};
+tx.forEach(t=>{
+  balance += t.type==="Entrata"? t.amount : -t.amount;
+  t.balance=balance;
+  const m=t.date.slice(0,7);
+  if(!monthly[m]) monthly[m]={in:0,out:0,saldo:0};
+  if(t.type==="Entrata") monthly[m].in+=t.amount; else monthly[m].out+=t.amount;
+  monthly[m].saldo=balance;
 });
 
-const monthly = {};
-transactions.forEach(t=>{
-  const m = t.date.slice(0,7);
-  if(!monthly[m]) monthly[m]={entrate:0,uscite:0,saldo:0};
-  if(t.type==="Entrata") monthly[m].entrate += t.amount; else monthly[m].uscite += t.amount;
-  monthly[m].saldo = t.balance;
+const eur=v=>`€ ${Math.round(v).toLocaleString('it-IT')}`;
+
+/********** RENDER **********/
+// Cards
+const cardWrap=document.getElementById('summary-cards');
+[["Saldo iniziale",startBalance],["Entrate totali",Object.values(monthly).reduce((s,m)=>s+m.in,0),"income-color"],["Uscite totali",Object.values(monthly).reduce((s,m)=>s+m.out,0),"expense-color"],["Saldo corrente",balance]].forEach(([l,v,cls])=>{
+  const d=document.createElement('div');d.className='card';d.innerHTML=`<h2>${l}</h2><p class="${cls||''}">${eur(v)}</p>`;cardWrap.appendChild(d);
 });
 
-/************ RENDER UI ************/
-const eur = v => (Math.round(v)).toLocaleString("it-IT",{style:"currency",currency:"EUR",minimumFractionDigits:0,maximumFractionDigits:0});
-
-/* Summary cards */
-const cardsWrap=document.getElementById("summary-cards");
-const totIn = Object.values(monthly).reduce((s,m)=>s+m.entrate,0);
-const totOut= Object.values(monthly).reduce((s,m)=>s+m.uscite,0);
-const cards=[
-  {l:"Saldo iniziale", v:eur(startBalance)},
-  {l:"Entrate totali", v:eur(totIn), cls:"income-color"},
-  {l:"Uscite totali",  v:eur(totOut), cls:"expense-color"},
-  {l:"Saldo corrente", v:eur(running)}
-];
-cards.forEach(c=>{
-  const div=document.createElement("div");div.className="card";
-  div.innerHTML=`<h2>${c.l}</h2><p class="${c.cls||''}">${c.v}</p>`;
-  cardsWrap.appendChild(div);
-});
-
-/* Monthly table */
+// Monthly table
 const mBody=document.querySelector('#monthly-table tbody');
 Object.keys(monthly).sort().forEach(m=>{
-  const {entrate,uscite,saldo}=monthly[m];
+  const {in:inn,out,saldo}=monthly[m];
   const tr=document.createElement('tr');
-  tr.innerHTML=`<td>${m}</td><td class="income">${eur(entrate)}</td><td class="expense">${eur(uscite)}</td><td class="balance">${eur(saldo)}</td>`;
+  tr.innerHTML=`<td>${m}</td><td class="income">${eur(inn)}</td><td class="expense">${eur(out)}</td><td class="balance">${eur(saldo)}</td>`;
   mBody.appendChild(tr);
 });
 
-/* Transaction detailed */
-const txBody=document.querySelector('#transactions-table tbody');
-let cur="";
-transactions.forEach(t=>{
+// Transactions
+const tBody=document.querySelector('#transactions-table tbody');
+let current="";
+tx.forEach(t=>{
   const m=t.date.slice(0,7);
-  if(m!==cur){
-    cur=m;
+  if(m!==current){
+    current=m;
     const sep=document.createElement('tr');sep.className='month-sep';
-    const lab=new Date(`${m}-01`).toLocaleString('it-IT',{month:'long',year:'numeric'});
-    sep.innerHTML=`<td colspan="5">${lab.charAt(0).toUpperCase()+lab.slice(1)}</td>`;
-    txBody.appendChild(sep);
+    const label=new Date(`${m}-01`).toLocaleDateString('it-IT',{month:'long',year:'numeric'});
+    sep.innerHTML=`<td colspan="5">${label.charAt(0).toUpperCase()+label.slice(1)}</td>`;
+    tBody.appendChild(sep);
   }
-  const tr=document.createElement('tr');
-  tr.innerHTML=`<td>${t.date}</td><td>${t.category}</td><td>${t.type}</td><td class="${t.type==='Entrata'?'income':'expense'}">${eur(t.amount)}</td><td class="balance">${eur(t.balance)}</td>`;
-  txBody.appendChild(tr);
+  const row=document.createElement('tr');
+  row.innerHTML=`<td>${t.date}</td><td>${t.category}</td><td>${t.type}</td><td class="${t.type==='Entrata'?'income':'expense'}">${eur(t.amount)}</td><td class="balance">${eur(t.balance)}</td>`;
+  tBody.appendChild(row);
 });
 </script>
 </body>
