--- a/index.html
+++ b/index.html
@@ -7,170 +7,153 @@
     /* ---------- STILE QUADERNO ---------- */
     :root{
       --line-height: 28px;
-      --line-color: #c6d3e6;
-      --paper-bg: #fbfbfc;
+      --line-color: #cdd7ee;
+      --paper-bg: #fbfcff;
+      --ink-dark : #1f2937;
+      --green    : #1b8a2f;
+      --red      : #b91c1c;
+      --lav      : #d0d7e6;
     }
-    *{box-sizing:border-box;font-family:"Courier New",monospace;margin:0;padding:0}
+
+    *{box-sizing:border-box;margin:0;padding:0;font-family:"Courier New",monospace;}
     body{
-      padding:2rem;
+      padding:2rem 1rem;
       background:repeating-linear-gradient(var(--paper-bg) 0 var(--line-height),var(--line-color) var(--line-height) calc(var(--line-height)+1px));
-      color:#222;
+      color:var(--ink-dark);
     }
-    h1{text-align:center;margin-bottom:2rem;font-size:2rem;letter-spacing:1px}
+    h1{text-align:center;margin-bottom:2rem;font-size:2.2rem;letter-spacing:1px;text-transform:uppercase;}
     .container{max-width:1200px;margin:0 auto}
 
+    /* ---------- BADGES ---------- */
+    .badge{display:inline-block;padding:0.1rem 0.4rem;border-radius:4px;font-size:0.7rem;font-weight:700;text-transform:uppercase;letter-spacing:0.4px;color:#fff}
+    .badge.income{background:var(--green)}
+    .badge.expense{background:var(--red)}
+
     /* ---------- CARDS ---------- */
-    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1rem;margin-bottom:2rem}
-    .card{background:#ffffff88;border:1px solid #7a7a7a;padding:1rem;border-radius:8px;text-align:center}
-    .card h2{font-size:0.9rem;color:#444;margin-bottom:0.3rem}
+    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1rem;margin-bottom:2rem;}
+    .card{background:#ffffffbb;border:1px solid #848484;backdrop-filter:blur(2px);padding:1rem 0.8rem;border-radius:10px;text-align:center;box-shadow:0 2px 4px rgba(0,0,0,.06)}
+    .card h2{font-size:0.85rem;color:#444;margin-bottom:0.15rem;}
     .card p{font-size:1.4rem;font-weight:700}
-    .income-color{color:#2e7d32}
-    .expense-color{color:#c62828}
+    .card p.positive{color:var(--green)}
+    .card p.negative{color:var(--red)}
 
-    /* ---------- TABLES ---------- */
-    table{width:100%;border-collapse:collapse;background:#ffffffaa;border:1px solid #7a7a7a;margin-bottom:3rem}
-    thead{background:#3c3c3c;color:#fff}
-    th,td{padding:0.5rem;text-align:center;font-size:0.9rem}
-    tbody tr:nth-child(even){background:#f7f7f7bb}
-    tbody td.income{color:#2e7d32;font-weight:600}
-    tbody td.expense{color:#c62828;font-weight:600}
-    tbody td.balance{font-weight:700}
-    h2{margin:1.8rem 0 0.6rem;font-size:1.2rem;text-decoration:underline;}
+    /* ---------- TABLE COMMON ---------- */
+    table{width:100%;border-collapse:collapse;margin-bottom:3rem;background:#ffffffd0;border:1px solid #7e7e7e;backdrop-filter:blur(2px)}
+    thead{background:#343434;color:#fff;}
+    th,td{padding:0.55rem 0.6rem;text-align:center;font-size:0.92rem;}
+    tbody tr:nth-child(even){background:#f1f5f9dd;}
 
-    .month-sep td{background:#d0d7e6;font-weight:700;text-align:left;font-size:1rem;padding-left:0.4rem}
+    /* ---------- CUSTOM CELLS ---------- */
+    td.income::before{content:"+ ";color:var(--green);font-weight:700;}
+    td.expense::before{content:"- ";color:var(--red);font-weight:700;}
+    td.income{color:var(--green);font-weight:600;}
+    td.expense{color:var(--red);font-weight:600;}
+    td.balance{font-weight:700;}
+    td.balance.positive{color:var(--green)}
+    td.balance.negative{color:var(--red)}
+
+    /* ---------- TITOLI SEZIONE ---------- */
+    h2{margin:1.6rem 0 0.5rem;font-size:1.3rem;text-decoration:underline double;}
+
+    /* ---------- SEPARATORE MESE ---------- */
+    .month-sep td{background:var(--lav);font-weight:700;text-align:left;font-size:1rem;padding-left:0.4rem;}
   </style>
 </head>
 <body>
   <h1>Prospetto Entrate &amp; Uscite</h1>
   <div class="container">
     <section id="summary-cards" class="cards"></section>
+
     <h2>Riepilogo Mensile</h2>
-    <table id="monthly-table"><thead><tr><th>Mese</th><th>Entrate</th><th>Uscite</th><th>Saldo Finale</th></tr></thead><tbody></tbody></table>
+    <table id="monthly-table">
+      <thead>
+        <tr><th>Mese</th><th>Entrate</th><th>Uscite</th><th>Saldo Finale</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
     <h2>Dettaglio Transazioni</h2>
-    <table id="transactions-table"><thead><tr><th>Data</th><th>Categoria</th><th>Tipo</th><th>Importo</th><th>Saldo dopo operazione</th></tr></thead><tbody></tbody></table>
+    <table id="transactions-table">
+      <thead>
+        <tr><th>Data</th><th>Categoria</th><th>Tipo</th><th>Importo</th><th>Saldo dopo operazione</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
 
 <script>
 /*************** PARAMETRI ***************/
-const startBalance = 6100;                    // saldo 24‑06‑2025
+const startBalance = 6100;  // saldo 24-06-2025
 const startDate    = new Date("2025-06-24");
 const endDate      = new Date("2026-12-31");
-
-const lastDay = (y,m) => new Date(y, m+1, 0).getDate();
+const lastDay = (y,m) => new Date(y,m+1,0).getDate();
 
 /* === ABBONAMENTI RICORRENTI === */
-const subscriptions = [
-  {cat:"Netflix",        amt:19, day:26, from:"2025-06"},
-  {cat:"Will",           amt:7,  day:28, from:"2025-06"},
-  {cat:"ChatGPT",        amt:23, day:22, from:"2025-06"},
-  {cat:"NowTV",          amt:5,  day:19, from:"2025-07"},
-  {cat:"Spotify",        amt:15, day:20, from:"2025-07"},
-  {cat:"Prime Video AD", amt:2,  day:16, from:"2025-07"},
-  {cat:"iCloud",         amt:10, day:23, from:"2025-07"},
-  {cat:"YouTube+",       amt:9,  day:11, from:"2025-07"},
-  {cat:"Prime",          amt:5,  day:16, from:"2025-07"}
+const subs=[
+  {cat:"Netflix",amt:19,day:26,from:"2025-06"},
+  {cat:"Will",amt:7,day:28,from:"2025-06"},
+  {cat:"ChatGPT",amt:23,day:22,from:"2025-06"},
+  {cat:"NowTV",amt:5,day:19,from:"2025-07"},
+  {cat:"Spotify",amt:15,day:20,from:"2025-07"},
+  {cat:"Prime Video AD",amt:2,day:16,from:"2025-07"},
+  {cat:"Prime",amt:5,day:16,from:"2025-07"},
+  {cat:"iCloud",amt:10,day:23,from:"2025-07"},
+  {cat:"YouTube+",amt:9,day:11,from:"2025-07"}
 ];
 
-/* === SPESE/ENTRATE UNA‑TANTUM === */
-const oneOff = [
-  {date:"2025-06-27",cat:"Aereo Sicilia", amt:53,  type:"Spesa"},
-  {date:"2025-07-12",cat:"Beat Canzone",  amt:35,  type:"Spesa"},
-  {date:"2025-08-12",cat:"Beat Canzone",  amt:35,  type:"Spesa"},
-  {date:"2025-07-16",cat:"Mix Canzone",   amt:27,  type:"Spesa"},
-  {date:"2025-08-16",cat:"Mix Canzone",   amt:27,  type:"Spesa"},
-  {date:"2025-07-27",cat:"Aereo Sicilia", amt:53,  type:"Spesa"},
-  {date:"2025-08-10",cat:"Rimborso 730",  amt:400, type:"Entrata"},
-  {date:"2025-07-15",cat:"Tredicesima",   amt:1300,type:"Entrata"}
+/* === UNA TANTUM & RATE === */
+const oneOff=[
+  {d:"2025-06-27",cat:"Aereo Sicilia",amt:53,type:"Spesa"},
+  {d:"2025-07-12",cat:"Beat Canzone",amt:35,type:"Spesa"},
+  {d:"2025-07-16",cat:"Mix Canzone",amt:27,type:"Spesa"},
+  {d:"2025-07-27",cat:"Aereo Sicilia",amt:53,type:"Spesa"},
+  {d:"2025-08-10",cat:"Rimborso 730",amt:400,type:"Entrata"},
+  {d:"2025-08-12",cat:"Beat Canzone",amt:35,type:"Spesa"},
+  {d:"2025-08-16",cat:"Mix Canzone",amt:27,type:"Spesa"},
+  {d:"2025-07-15",cat:"Tredicesima",amt:1300,type:"Entrata"}
 ];
+const loan=["2025-07-01","2025-08-01","2025-09-01","2025-10-01"].map(d=>({d,cat:"Finanziamento",amt:39,type:"Spesa"}));
 
-/* === RATE FINANZIAMENTO === */
-const loan = [
-  "2025-07-01","2025-08-01","2025-09-01","2025-10-01"
-].map(d=>({date:d,cat:"Finanziamento",amt:39,type:"Spesa"}));
+/******** GENERA LISTA TRANSAZIONI ********/ 
+const tx=[]; const push=(d,cat,type,amt)=>tx.push({date:d,category:cat,type,amount:amt});
+[...oneOff,...loan].forEach(o=>push(o.d,o.cat,o.type,o.amt));
 
-/************ GENERA TRANSAZIONI ************/
-const tx=[];
-const add=(d,cat,type,amt)=>tx.push({date:d,category:cat,type,amount:amt});
-
-[...oneOff,...loan].forEach(o=>add(o.date,o.cat,o.type,o.amt));
-
-let cur = new Date(startDate.getFullYear(), startDate.getMonth(), 1);
+let cur=new Date(startDate.getFullYear(),startDate.getMonth(),1);
 while(cur<=endDate){
-  const y=cur.getFullYear();
-  const m=cur.getMonth();
-  const iso=`${y}-${String(m+1).padStart(2,'0')}`;
-
-  // Entrate fisse da luglio 2025
-  if(cur>=new Date("2025-07-01")){
-    add(`${iso}-01`, "Stipendio", "Entrata", 1650);
-    add(`${iso}-01`, "Ticket Edenred", "Entrata", 160);
-  }
-  // Affitto
-  add(`${iso}-${lastDay(y,m)}`, "Affitto", "Spesa", 680);
-  // ATM tranne agosto 2025
-  if(iso!=="2025-08") add(`${iso}-${lastDay(y,m)}`, "ATM", "Spesa", 39);
-  // Tabacco 4 volte
-  [5,12,19,26].forEach(d=>{ if(d<=lastDay(y,m)) add(`${iso}-${String(d).padStart(2,'0')}`,"Tabacco","Spesa",20);} );
-  // Abbonamenti
-  subscriptions.forEach(s=>{
-    if(iso>=s.from){
-      const day=Math.min(s.day,lastDay(y,m));
-      add(`${iso}-${String(day).padStart(2,'0')}`, s.cat, "Spesa", s.amt);
-    }
-  });
-
+  const y=cur.getFullYear(),m=cur.getMonth();const iso=`${y}-${String(m+1).padStart(2,'0')}`;
+  if(cur>=new Date("2025-07-01")){push(`${iso}-01","Stipendio","Entrata",1650);push(`${iso}-01","Ticket Edenred","Entrata",160);}  
+  push(`${iso}-${lastDay(y,m)}`,"Affitto","Spesa",680);
+  if(iso!=="2025-08") push(`${iso}-${lastDay(y,m)}`,"ATM","Spesa",39);
+  [5,12,19,26].forEach(d=>d<=lastDay(y,m)&&push(`${iso}-${String(d).padStart(2,'0')}`,"Tabacco","Spesa",20));
+  subs.forEach(s=>{if(iso>=s.from){const day=Math.min(s.day,lastDay(y,m));push(`${iso}-${String(day).padStart(2,'0')}`,s.cat,"Spesa",s.amt);}});
   cur.setMonth(m+1);
 }
 
-// Ordina
-tx.sort((a,b)=> new Date(a.date)-new Date(b.date));
+/* ORDINA */
+tx.sort((a,b)=>new Date(a.date)-new Date(b.date));
 
-/*********** CALCOLA SALDI ***********/
-let balance=startBalance;
-const monthly={};
-tx.forEach(t=>{
-  balance += t.type==="Entrata"? t.amount : -t.amount;
-  t.balance=balance;
-  const m=t.date.slice(0,7);
-  if(!monthly[m]) monthly[m]={in:0,out:0,saldo:0};
-  if(t.type==="Entrata") monthly[m].in+=t.amount; else monthly[m].out+=t.amount;
-  monthly[m].saldo=balance;
+/* CALCOLA SALDO */
+let bal=startBalance;const monthly={};
+for(const t of tx){bal+=t.type==="Entrata"?t.amount:-t.amount;t.balance=bal;const m=t.date.slice(0,7);monthly[m]??={in:0,out:0,s:0};t.type==="Entrata"?monthly[m].in+=t.amount:monthly[m].out+=t.amount;monthly[m].s=bal;}
+
+/* UTIL */
+const fmt=v=>`€ ${Math.round(v).toLocaleString('it-IT')}`;
+
+/******** RENDER CARDS ********/ 
+const cardWrap=document.getElementById("summary-cards");
+[["Saldo iniziale",startBalance],["Entrate totali",Object.values(monthly).reduce((s,m)=>s+m.in,0)],["Uscite totali",Object.values(monthly).reduce((s,m)=>s+m.out,0)],["Saldo corrente",bal]].forEach(([l,v],i)=>{
+  const div=document.createElement("div");div.className="card";const cls=i==1?"positive":i==2?"negative":"";div.innerHTML=`<h2>${l}</h2><p class="${cls}">${fmt(v)}</p>`;cardWrap.appendChild(div);
 });
 
-const eur=v=>`€ ${Math.round(v).toLocaleString('it-IT')}`;
-
-/********** RENDER **********/
-// Cards
-const cardWrap=document.getElementById('summary-cards');
-[["Saldo iniziale",startBalance],["Entrate totali",Object.values(monthly).reduce((s,m)=>s+m.in,0),"income-color"],["Uscite totali",Object.values(monthly).reduce((s,m)=>s+m.out,0),"expense-color"],["Saldo corrente",balance]].forEach(([l,v,cls])=>{
-  const d=document.createElement('div');d.className='card';d.innerHTML=`<h2>${l}</h2><p class="${cls||''}">${eur(v)}</p>`;cardWrap.appendChild(d);
-});
-
-// Monthly table
+/******** RENDER RIEPILOGO MENSILE ********/ 
 const mBody=document.querySelector('#monthly-table tbody');
 Object.keys(monthly).sort().forEach(m=>{
-  const {in:inn,out,saldo}=monthly[m];
-  const tr=document.createElement('tr');
-  tr.innerHTML=`<td>${m}</td><td class="income">${eur(inn)}</td><td class="expense">${eur(out)}</td><td class="balance">${eur(saldo)}</td>`;
-  mBody.appendChild(tr);
+  const {in:i,out:o,s}=monthly[m];const tr=document.createElement('tr');tr.innerHTML=`<td>${m}</td><td class="income">${fmt(i)}</td><td class="expense">${fmt(o)}</td><td class="balance ${s>=0?'positive':'negative'}">${fmt(s)}</td>`;mBody.appendChild(tr);
 });
 
-// Transactions
-const tBody=document.querySelector('#transactions-table tbody');
-let current="";
-tx.forEach(t=>{
-  const m=t.date.slice(0,7);
-  if(m!==current){
-    current=m;
-    const sep=document.createElement('tr');sep.className='month-sep';
-    const label=new Date(`${m}-01`).toLocaleDateString('it-IT',{month:'long',year:'numeric'});
-    sep.innerHTML=`<td colspan="5">${label.charAt(0).toUpperCase()+label.slice(1)}</td>`;
-    tBody.appendChild(sep);
-  }
-  const row=document.createElement('tr');
-  row.innerHTML=`<td>${t.date}</td><td>${t.category}</td><td>${t.type}</td><td class="${t.type==='Entrata'?'income':'expense'}">${eur(t.amount)}</td><td class="balance">${eur(t.balance)}</td>`;
-  tBody.appendChild(row);
-});
+/******** RENDER DETTAGLIO ********/ 
+const tbody=document.querySelector('#transactions-table tbody');let cm="";
+for(const t of tx){const m=t.date.slice(0,7);if(m!==cm){cm=m;const sep=document.createElement('tr');sep.className='month-sep';const lab=new Date(`${m}-01`).toLocaleDateString('it-IT',{month:'long',year:'numeric'});sep.innerHTML=`<td colspan="5">${lab.charAt(0).toUpperCase()+lab.slice(1)}</td>`;tbody.appendChild(sep);}const tr=document.createElement('tr');tr.innerHTML=`<td>${t.date}</td><td>${t.category}</td><td><span class="badge ${t.type==='Entrata'?'income':'expense'}">${t.type==='Entrata'?'Entrata':'Spesa'}</span></td><td class="${t.type==='Entrata'?'income':'expense'}">${fmt(t.amount)}</td><td class="balance ${t.balance>=0?'positive':'negative'}">${fmt(t.balance)}</td>`;tbody.appendChild(tr);} 
 </script>
 </body>
 </html>
