--- a/index.html
+++ b/index.html
@@ -4,59 +4,46 @@
   <meta charset="UTF-8">
   <title>Quaderno Finanze Personali</title>
   <style>
-    /* ---------- STILE QUADERNO ---------- */
     :root{
-      --line-height: 28px;
-      --line-color: #cdd7ee;
-      --paper-bg: #fbfcff;
-      --ink-dark : #1f2937;
-      --green    : #1b8a2f;
-      --red      : #b91c1c;
-      --lav      : #d0d7e6;
+      --line-height:28px;--line-color:#cdd7ee;--paper-bg:#fbfcff;--ink:#1e293b;
+      --green:#15803d;--red:#b91c1c;--lav:#d0d7e6;
     }
-
-    *{box-sizing:border-box;margin:0;padding:0;font-family:"Courier New",monospace;}
+    *{box-sizing:border-box;margin:0;padding:0;font-family:"Courier New",monospace}
     body{
       padding:2rem 1rem;
       background:repeating-linear-gradient(var(--paper-bg) 0 var(--line-height),var(--line-color) var(--line-height) calc(var(--line-height)+1px));
-      color:var(--ink-dark);
+      color:var(--ink);
     }
-    h1{text-align:center;margin-bottom:2rem;font-size:2.2rem;letter-spacing:1px;text-transform:uppercase;}
+    h1{text-align:center;margin-bottom:2rem;font-size:2.2rem;text-transform:uppercase;letter-spacing:1px}
     .container{max-width:1200px;margin:0 auto}
 
-    /* ---------- BADGES ---------- */
-    .badge{display:inline-block;padding:0.1rem 0.4rem;border-radius:4px;font-size:0.7rem;font-weight:700;text-transform:uppercase;letter-spacing:0.4px;color:#fff}
+    /* BADGES */
+    .badge{display:inline-block;padding:0.1rem 0.45rem;border-radius:4px;font-size:0.7rem;font-weight:700;text-transform:uppercase;color:#fff}
     .badge.income{background:var(--green)}
     .badge.expense{background:var(--red)}
 
-    /* ---------- CARDS ---------- */
-    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1rem;margin-bottom:2rem;}
-    .card{background:#ffffffbb;border:1px solid #848484;backdrop-filter:blur(2px);padding:1rem 0.8rem;border-radius:10px;text-align:center;box-shadow:0 2px 4px rgba(0,0,0,.06)}
-    .card h2{font-size:0.85rem;color:#444;margin-bottom:0.15rem;}
+    /* CARDS */
+    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1rem;margin-bottom:2rem}
+    .card{background:#ffffffe0;border:1px solid #888;backdrop-filter:blur(2px);padding:1rem;border-radius:10px;text-align:center;box-shadow:0 2px 4px rgba(0,0,0,.08)}
+    .card h2{font-size:0.85rem;margin-bottom:0.15rem}
     .card p{font-size:1.4rem;font-weight:700}
-    .card p.positive{color:var(--green)}
-    .card p.negative{color:var(--red)}
+    .card .positive{color:var(--green)}
+    .card .negative{color:var(--red)}
 
-    /* ---------- TABLE COMMON ---------- */
-    table{width:100%;border-collapse:collapse;margin-bottom:3rem;background:#ffffffd0;border:1px solid #7e7e7e;backdrop-filter:blur(2px)}
-    thead{background:#343434;color:#fff;}
-    th,td{padding:0.55rem 0.6rem;text-align:center;font-size:0.92rem;}
-    tbody tr:nth-child(even){background:#f1f5f9dd;}
-
-    /* ---------- CUSTOM CELLS ---------- */
-    td.income::before{content:"+ ";color:var(--green);font-weight:700;}
-    td.expense::before{content:"- ";color:var(--red);font-weight:700;}
-    td.income{color:var(--green);font-weight:600;}
-    td.expense{color:var(--red);font-weight:600;}
-    td.balance{font-weight:700;}
+    /* TABELLE */
+    table{width:100%;border-collapse:collapse;margin-bottom:2.5rem;background:#ffffffd0;border:1px solid #888;backdrop-filter:blur(2px)}
+    thead{background:#343434;color:#fff}
+    th,td{padding:0.55rem 0.6rem;text-align:center;font-size:0.9rem}
+    tbody tr:nth-child(even){background:#f1f5f9dd}
+    td.income::before{content:'+ ';font-weight:700;color:var(--green)}
+    td.expense::before{content:'- ';font-weight:700;color:var(--red)}
+    td.income{color:var(--green);font-weight:600}
+    td.expense{color:var(--red);font-weight:600}
+    td.balance{font-weight:700}
     td.balance.positive{color:var(--green)}
     td.balance.negative{color:var(--red)}
-
-    /* ---------- TITOLI SEZIONE ---------- */
-    h2{margin:1.6rem 0 0.5rem;font-size:1.3rem;text-decoration:underline double;}
-
-    /* ---------- SEPARATORE MESE ---------- */
-    .month-sep td{background:var(--lav);font-weight:700;text-align:left;font-size:1rem;padding-left:0.4rem;}
+    h2{margin:1.4rem 0 0.5rem;font-size:1.25rem;text-decoration:underline double}
+    .month-sep td{background:var(--lav);font-weight:700;text-align:left;font-size:1rem;padding-left:0.4rem}
   </style>
 </head>
 <body>
@@ -66,94 +53,89 @@
 
     <h2>Riepilogo Mensile</h2>
     <table id="monthly-table">
-      <thead>
-        <tr><th>Mese</th><th>Entrate</th><th>Uscite</th><th>Saldo Finale</th></tr>
-      </thead>
+      <thead><tr><th>Mese</th><th>Entrate</th><th>Uscite</th><th>Saldo Finale</th></tr></thead>
       <tbody></tbody>
     </table>
 
     <h2>Dettaglio Transazioni</h2>
     <table id="transactions-table">
-      <thead>
-        <tr><th>Data</th><th>Categoria</th><th>Tipo</th><th>Importo</th><th>Saldo dopo operazione</th></tr>
-      </thead>
+      <thead><tr><th>Data</th><th>Categoria</th><th>Tipo</th><th>Importo</th><th>Saldo dopo operazione</th></tr></thead>
       <tbody></tbody>
     </table>
   </div>
 
 <script>
-/*************** PARAMETRI ***************/
-const startBalance = 6100;  // saldo 24-06-2025
-const startDate    = new Date("2025-06-24");
-const endDate      = new Date("2026-12-31");
-const lastDay = (y,m) => new Date(y,m+1,0).getDate();
+/************* CONFIG *****************/
+const START_BALANCE = 6100;                // saldo 24-06-2025
+const START_DATE    = new Date('2025-06-24');
+const END_DATE      = new Date('2026-12-31');
+const lastDay = (y,m)=>new Date(y,m+1,0).getDate();
 
-/* === ABBONAMENTI RICORRENTI === */
-const subs=[
-  {cat:"Netflix",amt:19,day:26,from:"2025-06"},
-  {cat:"Will",amt:7,day:28,from:"2025-06"},
-  {cat:"ChatGPT",amt:23,day:22,from:"2025-06"},
-  {cat:"NowTV",amt:5,day:19,from:"2025-07"},
-  {cat:"Spotify",amt:15,day:20,from:"2025-07"},
-  {cat:"Prime Video AD",amt:2,day:16,from:"2025-07"},
-  {cat:"Prime",amt:5,day:16,from:"2025-07"},
-  {cat:"iCloud",amt:10,day:23,from:"2025-07"},
-  {cat:"YouTube+",amt:9,day:11,from:"2025-07"}
+// Abbonamenti mensili
+const SUBS = [
+  ['Netflix',19,26,'2025-06'],['Will',7,28,'2025-06'],['ChatGPT',23,22,'2025-06'],
+  ['NowTV',5,19,'2025-07'],['Spotify',15,20,'2025-07'],['Prime Video AD',2,16,'2025-07'],
+  ['Prime',5,16,'2025-07'],['iCloud',10,23,'2025-07'],['YouTube+',9,11,'2025-07']
 ];
-
-/* === UNA TANTUM & RATE === */
-const oneOff=[
-  {d:"2025-06-27",cat:"Aereo Sicilia",amt:53,type:"Spesa"},
-  {d:"2025-07-12",cat:"Beat Canzone",amt:35,type:"Spesa"},
-  {d:"2025-07-16",cat:"Mix Canzone",amt:27,type:"Spesa"},
-  {d:"2025-07-27",cat:"Aereo Sicilia",amt:53,type:"Spesa"},
-  {d:"2025-08-10",cat:"Rimborso 730",amt:400,type:"Entrata"},
-  {d:"2025-08-12",cat:"Beat Canzone",amt:35,type:"Spesa"},
-  {d:"2025-08-16",cat:"Mix Canzone",amt:27,type:"Spesa"},
-  {d:"2025-07-15",cat:"Tredicesima",amt:1300,type:"Entrata"}
+// Una tantum / rate
+const ONE_OFF = [
+  ['2025-06-27','Aereo Sicilia',53,'Spesa'],
+  ['2025-07-12','Beat Canzone',35,'Spesa'],['2025-07-16','Mix Canzone',27,'Spesa'],['2025-07-27','Aereo Sicilia',53,'Spesa'],
+  ['2025-08-10','Rimborso 730',400,'Entrata'],['2025-08-12','Beat Canzone',35,'Spesa'],['2025-08-16','Mix Canzone',27,'Spesa'],
+  ['2025-07-15','Tredicesima',1300,'Entrata']
 ];
-const loan=["2025-07-01","2025-08-01","2025-09-01","2025-10-01"].map(d=>({d,cat:"Finanziamento",amt:39,type:"Spesa"}));
+const LOAN = ['2025-07-01','2025-08-01','2025-09-01','2025-10-01'].map(d=>[d,'Finanziamento',39,'Spesa']);
 
-/******** GENERA LISTA TRANSAZIONI ********/ 
-const tx=[]; const push=(d,cat,type,amt)=>tx.push({date:d,category:cat,type,amount:amt});
-[...oneOff,...loan].forEach(o=>push(o.d,o.cat,o.type,o.amt));
+/************* GENERA TRANS. ***********/
+const tx=[];
+const push=(d,c,t,a)=>tx.push({date:d,category:c,type:t,amount:a});
+[...ONE_OFF,...LOAN].forEach(([d,c,a,t])=>push(d,c,t,a));
 
-let cur=new Date(startDate.getFullYear(),startDate.getMonth(),1);
-while(cur<=endDate){
-  const y=cur.getFullYear(),m=cur.getMonth();const iso=`${y}-${String(m+1).padStart(2,'0')}`;
-  if(cur>=new Date("2025-07-01")){push(`${iso}-01","Stipendio","Entrata",1650);push(`${iso}-01","Ticket Edenred","Entrata",160);}  
-  push(`${iso}-${lastDay(y,m)}`,"Affitto","Spesa",680);
-  if(iso!=="2025-08") push(`${iso}-${lastDay(y,m)}`,"ATM","Spesa",39);
-  [5,12,19,26].forEach(d=>d<=lastDay(y,m)&&push(`${iso}-${String(d).padStart(2,'0')}`,"Tabacco","Spesa",20));
-  subs.forEach(s=>{if(iso>=s.from){const day=Math.min(s.day,lastDay(y,m));push(`${iso}-${String(day).padStart(2,'0')}`,s.cat,"Spesa",s.amt);}});
+let cur=new Date(START_DATE.getFullYear(),START_DATE.getMonth(),1);
+while(cur<=END_DATE){
+  const y=cur.getFullYear(), m=cur.getMonth(); const iso=`${y}-${String(m+1).padStart(2,'0')}`;
+  // Entrate fisse
+  if(cur>=new Date('2025-07-01')){push(`${iso}-01`,'Stipendio','Entrata',1650);push(`${iso}-01`,'Ticket Edenred','Entrata',160);}  
+  // Affitto & ATM
+  push(`${iso}-${lastDay(y,m)}`,'Affitto','Spesa',680);
+  if(iso!=='2025-08') push(`${iso}-${lastDay(y,m)}`,'ATM','Spesa',39);
+  // Tabacco settimanale
+  [5,12,19,26].forEach(d=>d<=lastDay(y,m)&&push(`${iso}-${String(d).padStart(2,'0')}`,'Tabacco','Spesa',20));
+  // Abbonamenti
+  SUBS.forEach(([cat,amt,day,from])=>{if(iso>=from){const d=Math.min(day,lastDay(y,m));push(`${iso}-${String(d).padStart(2,'0')}`,cat,'Spesa',amt);}});
   cur.setMonth(m+1);
 }
 
-/* ORDINA */
+/************* CALCOLI ***********/
 tx.sort((a,b)=>new Date(a.date)-new Date(b.date));
-
-/* CALCOLA SALDO */
-let bal=startBalance;const monthly={};
-for(const t of tx){bal+=t.type==="Entrata"?t.amount:-t.amount;t.balance=bal;const m=t.date.slice(0,7);monthly[m]??={in:0,out:0,s:0};t.type==="Entrata"?monthly[m].in+=t.amount:monthly[m].out+=t.amount;monthly[m].s=bal;}
-
-/* UTIL */
+let running=START_BALANCE;
+const monthly={};
+for(const t of tx){
+  running += t.type==='Entrata'? t.amount : -t.amount;
+  t.balance=running;
+  const key=t.date.slice(0,7);
+  monthly[key]??={in:0,out:0,s:0};
+  if(t.type==='Entrata') monthly[key].in+=t.amount; else monthly[key].out+=t.amount;
+  monthly[key].s=running;
+}
 const fmt=v=>`€ ${Math.round(v).toLocaleString('it-IT')}`;
 
-/******** RENDER CARDS ********/ 
-const cardWrap=document.getElementById("summary-cards");
-[["Saldo iniziale",startBalance],["Entrate totali",Object.values(monthly).reduce((s,m)=>s+m.in,0)],["Uscite totali",Object.values(monthly).reduce((s,m)=>s+m.out,0)],["Saldo corrente",bal]].forEach(([l,v],i)=>{
-  const div=document.createElement("div");div.className="card";const cls=i==1?"positive":i==2?"negative":"";div.innerHTML=`<h2>${l}</h2><p class="${cls}">${fmt(v)}</p>`;cardWrap.appendChild(div);
-});
+/************* RENDER ***********/
+const cardWrap=document.getElementById('summary-cards');
+[["Saldo iniziale",START_BALANCE,''],["Entrate totali",Object.values(monthly).reduce((s,m)=>s+m.in,0),'positive'],["Uscite totali",Object.values(monthly).reduce((s,m)=>s+m.out,0),'negative'],["Saldo corrente",running,running>=0?'positive':'negative']].forEach(([l,v,cls])=>{const d=document.createElement('div');d.className='card';d.innerHTML=`<h2>${l}</h2><p class="${cls}">${fmt(v)}</p>`;cardWrap.appendChild(d);});
 
-/******** RENDER RIEPILOGO MENSILE ********/ 
 const mBody=document.querySelector('#monthly-table tbody');
-Object.keys(monthly).sort().forEach(m=>{
-  const {in:i,out:o,s}=monthly[m];const tr=document.createElement('tr');tr.innerHTML=`<td>${m}</td><td class="income">${fmt(i)}</td><td class="expense">${fmt(o)}</td><td class="balance ${s>=0?'positive':'negative'}">${fmt(s)}</td>`;mBody.appendChild(tr);
-});
+Object.keys(monthly).sort().forEach(k=>{const {in:inn,out,s}=monthly[k];const tr=document.createElement('tr');tr.innerHTML=`<td>${k}</td><td class='income'>${fmt(inn)}</td><td class='expense'>${fmt(out)}</td><td class='balance ${s>=0?'positive':'negative'}'>${fmt(s)}</td>`;mBody.appendChild(tr);});
 
-/******** RENDER DETTAGLIO ********/ 
-const tbody=document.querySelector('#transactions-table tbody');let cm="";
-for(const t of tx){const m=t.date.slice(0,7);if(m!==cm){cm=m;const sep=document.createElement('tr');sep.className='month-sep';const lab=new Date(`${m}-01`).toLocaleDateString('it-IT',{month:'long',year:'numeric'});sep.innerHTML=`<td colspan="5">${lab.charAt(0).toUpperCase()+lab.slice(1)}</td>`;tbody.appendChild(sep);}const tr=document.createElement('tr');tr.innerHTML=`<td>${t.date}</td><td>${t.category}</td><td><span class="badge ${t.type==='Entrata'?'income':'expense'}">${t.type==='Entrata'?'Entrata':'Spesa'}</span></td><td class="${t.type==='Entrata'?'income':'expense'}">${fmt(t.amount)}</td><td class="balance ${t.balance>=0?'positive':'negative'}">${fmt(t.balance)}</td>`;tbody.appendChild(tr);} 
+const tBody=document.querySelector('#transactions-table tbody');
+let currentMonth='';
+for(const t of tx){
+  const mKey=t.date.slice(0,7);
+  if(mKey!==currentMonth){currentMonth=mKey;const sep=document.createElement('tr');sep.className='month-sep';const label=new Date(`${mKey}-01`).toLocaleDateString('it-IT',{month:'long',year:'numeric'});sep.innerHTML=`<td colspan='5'>${label.charAt(0).toUpperCase()+label.slice(1)}</td>`;tBody.appendChild(sep);}  
+  const row=document.createElement('tr');
+  row.innerHTML=`<td>${t.date}</td><td>${t.category}</td><td><span class='badge ${t.type==='Entrata'?'income':'expense'}'>${t.type}</span></td><td class='${t.type==='Entrata'?'income':'expense'}'>${fmt(t.amount)}</td><td class='balance ${t.balance>=0?'positive':'negative'}'>${fmt(t.balance)}</td>`;
+  tBody.appendChild(row);
+}
 </script>
 </body>
 </html>
